--- a/DannyNguyen/skaters.html
+++ b/DannyNguyen/skaters.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <script src="script.js"></script>
-    <title>Memberships - Skaters</title>
+    <title>Placeholder</title>
 </head>
 <body>
-    <h2>Memberships - Skaters</h2>
-    <p1>Skaters can become financial members in order to qualify for interstate competition.</p1>
-    <p1>Skaters under the age of 16 must be registered with a parent/guardian.</p1>
+    <h2>Placeholder Page</h2>
+    <p1>More information on each card will be placed here.</p1>
 </body>
 </html>
