--- a/DannyNguyen/index.html
+++ b/DannyNguyen/index.html
@@ -36,7 +36,7 @@
 
 <div class="card" >
   <h1>Governance</h1>
-  <img src="Skater02.jpg" alt="Card Image">
+  <img src="books.jpg" alt="Card Image">
   <div class="card-info">
     <h2>TBD</h2>
     <p>TBD<br>Click for more information.</p>
@@ -46,7 +46,7 @@
 
 <div class="card" >
   <h1>Procedures and Policies</h1>
-  <img src="Skater03.jpg" width="400" height="400" alt="Card Image">
+  <img src="Skater02.jpg" width="400" height="400" alt="Card Image">
   <div class="card-info">
     <h2>Procedures and Policies</h2>
     <p3>Read about the FSANT polices and procedures.<br>Click for more information.</p3>
